Revert Arrays change